added style sheet

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!HTML5>
 <head>
   <title>Jacobus Burger</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <p>Hello, World!</p>
