--- a/index.html
+++ b/index.html
@@ -4,5 +4,29 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <p>Hello, World!</p>
+  <h1>Jacobus Burger</h1>
+  <h2>Computer Alchemist</h2>
+  <p>Hey there! My name is Jacobus Burger. I'm a computer scientist whose
+  interests include:</p>
+  <ul>
+    <li>Fullstack Web Development</li>
+    <li>Artificial Intelligence</li>
+    <li>Robotics</li>
+    <li>And much more!</li>
+  </ul>
+  <p>You may be wondering...</p>
+  <h3>What is a Computer Alchemist?</h3>
+  <p>In essence, a <bold>Computer Alchemist</bold> transforms problems
+  into solutions like ancient alchemists hoped to transmute lead into
+  gold. A Computer Alchemist (aka: A Computer Scientist) transforms the
+  problems encountered into incredible programs. I do just that and more!</p>
+  
+  <p>I'm a curious lifelong learner always growing, I'm quick to learn new
+  things too. I like to challenge with difficult problems and make cool
+  projects that help people.</p>
+
+  <p>I'm excited to hear from you! If you'd like to see more, please check out
+  my work at <a href="https://github.com/LordUbuntu">GitHub LordUbuntu</a></p>
+
+  
 </body>
