--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <title>Jacobus Burger</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <h1>Jacobus Burger</h1>
@@ -28,5 +29,8 @@
   <p>I'm excited to hear from you! If you'd like to see more, please check out
   my work at <a href="https://github.com/LordUbuntu">GitHub LordUbuntu</a></p>
 
-  
+  <p>Check out my socials:
+    <a href="https://github.com/LordUbuntu"><i class="fa-brands fa-github"></i></a>
+    <a href="https://www.linkedin.com/in/jacobus-burger-174b83181/"><i class="fa-brands fa-linkedin"></i></a>
+  </p>
 </body>
