--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
   <div class="navbar">
+    <a href="index.html">About</a>
+    <a href="contact.html">Contact</a>
   </div>
   <div class="content">
     <h1>Jacobus Burger</h1>
@@ -40,5 +42,6 @@
     </p>
   </div>
   <footer>
+    Made by Jacobus Burger 2023.
   </footer>
 </body>
