added more content to main page

--- a/index.html
+++ b/index.html
@@ -12,36 +12,42 @@
   <div class="content">
     <h1>Jacobus Burger</h1>
     <h2>Computer Alchemist</h2>
-    <p>Hey there! My name is Jacobus Burger. I'm a computer scientist whose
-    interests include:</p>
+    <p>Hey there! My name is Jacobus Burger. I'm a  <bold><em>Computer
+      Scientist</em></bold> whose interests include:</p>
     <ul class="hobbies">
       <li>Fullstack Web Development</li>
       <li>Artificial Intelligence</li>
       <li>Robotics</li>
+      <li>3D Printing</li>
+      <li>Programming Language Development</li>
+      <li>Speaking Human Languages</li>
       <li>And much more!</li>
     </ul>
-    <p>You may be wondering...</p>
-    <h3>What is a Computer Alchemist?</h3>
-    <p>In essence, a <bold>Computer Alchemist</bold> transforms problems
-    into solutions like ancient alchemists hoped to transmute lead into
-    gold. A Computer Alchemist (aka: A Computer Scientist) transforms the
-    problems encountered into incredible programs. I do just that and more!</p>
-    
-    <p>I'm a curious lifelong learner always growing, I'm quick to learn new
-    things too. I like to challenge with difficult problems and make cool
-    projects that help people.</p>
-
-    <p>I'm excited to hear from you! If you'd like to see more, please check out
-    my work at <a href="https://github.com/LordUbuntu">GitHub LordUbuntu</a></p>
-
-    <p>Check out my socials:
-      <a style="color: black" href="https://github.com/LordUbuntu"><i class="fa-brands fa-github"></i></a>
-      <a style="color: blue"
-        href="https://www.linkedin.com/in/jacobus-burger-174b83181/"><i
-          class="fa-brands fa-linkedin"></i></a>
+    <h3>The Computer Alchemist</h3>
+    <p>
+      As a "Computer Alchemist", I develop software: turning ideas and problems
+      into working solutions. Some of the awesome things I've done include:
+      <ul>
+        <li></li>
+        <li></li>
+        <li>Curling a 50lb personal record at the gym!</li>
+      </ul>
+    </p>
+    <p>
+      My greatest strength is my ability to always learn and grow.
+    </p>
+    <p>
+      I most enjoy learning new ideas and methods to improve my abilities, and
+      challenging myself to overcome difficult problems and challenges in life.
+      My motto is to "Always Grow". I am a firm believer in the inherent
+      potential to learn, grow, and transform in life. I'm quick to learn new
+      technologies and ideas because I am an incredibly curious lifelong learner
+      and always challenging myself to improve.
     </p>
   </div>
   <footer>
+    <a style="color: blue" href="https://www.linkedin.com/in/jacobus-burger-174b83181/"><i class="fa-brands fa-linkedin"></i></a>
+    <a style="color: black" href="https://github.com/LordUbuntu"><i class="fa-brands fa-github"></i></a>
     Made by Jacobus Burger 2023.
   </footer>
 </body>
