--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <div class="navbar">
     <a href="index.html">About</a>
     <a href="contact.html">Contact</a>
+    <a href="projects.html">Projects</a>
   </div>
   <div class="content">
     <h1>Jacobus Burger</h1>
