--- a/index.html
+++ b/index.html
@@ -1,57 +1,59 @@
 <!HTML5>
-<head>
-  <title>Jacobus Burger</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
-<body>
-  <div class="navbar">
-    <a href="index.html">About</a>
-    <a href="contact.html">Contact</a>
-    <a href="projects.html">Projects</a>
-  </div>
-  <div class="content">
-    <h1>Jacobus Burger</h1>
-    <h2>Computer Alchemist</h2>
-    <p>Hey there! My name is Jacobus Burger. I'm a  <bold><em>Computer
-      Scientist</em></bold> whose interests include:</p>
-    <ul class="hobbies">
-      <li>Fullstack Web Development</li>
-      <li>Artificial Intelligence</li>
-      <li>Robotics</li>
-      <li>3D Printing</li>
-      <li>Programming Language Development</li>
-      <li>Speaking Human Languages</li>
-      <li>And much more!</li>
-    </ul>
-    <h3>The Computer Alchemist</h3>
-    <p>
-      As a "Computer Alchemist", I develop software: turning ideas and problems
-      into working solutions. Some of the awesome things I've done include:
-      <ul>
-        <li></li>
-        <li></li>
-        <li>Curling a 50lb personal record at the gym!</li>
+<html lang="en">
+  <head>
+    <title>Jacobus Burger</title>
+    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  </head>
+  <body>
+    <div class="navbar">
+      <a href="index.html">About</a>
+      <a href="contact.html">Contact</a>
+      <a href="projects.html">Projects</a>
+    </div>
+    <div class="content">
+      <h1>Jacobus Burger</h1>
+      <h2>Computer Alchemist</h2>
+      <p>Hey there! My name is Jacobus Burger. I'm a  <bold><em>Computer
+        Scientist</em></bold> whose interests include:</p>
+      <ul class="hobbies">
+        <li>Fullstack Web Development</li>
+        <li>Artificial Intelligence</li>
+        <li>Robotics</li>
+        <li>3D Printing</li>
+        <li>Programming Language Development</li>
+        <li>Speaking Human Languages</li>
+        <li>And much more!</li>
       </ul>
-    </p>
-    <p>
-      My greatest strength is my ability to always learn and grow.
-    </p>
-    <p>
-      I most enjoy learning new ideas and methods to improve my abilities, and
-      challenging myself to overcome difficult problems and challenges in life.
-      My motto is to "Always Grow". I am a firm believer in the inherent
-      potential to learn, grow, and transform in life. I'm quick to learn new
-      technologies and ideas because I am an incredibly curious lifelong learner
-      and always challenging myself to improve.
-    </p>
-  </div>
-  <footer>
-    <p>
-      Socials:
-      <a href="https://www.linkedin.com/in/jacobus-burger-174b83181/"><i class="fa-brands fa-linkedin"></i></a>
-      <a href="https://github.com/LordUbuntu"><i class="fa-brands fa-github"></i></a>
-    </p>
-    Made by Jacobus Burger 2023.
-  </footer>
-</body>
+      <h3>The Computer Alchemist</h3>
+      <p>
+        As a "Computer Alchemist", I develop software: turning ideas and problems
+        into working solutions. Some of the awesome things I've done include:
+        <ul>
+          <li></li>
+          <li></li>
+          <li>Curling a 50lb personal record at the gym!</li>
+        </ul>
+      </p>
+      <p>
+        My greatest strength is my ability to always learn and grow.
+      </p>
+      <p>
+        I most enjoy learning new ideas and methods to improve my abilities, and
+        challenging myself to overcome difficult problems and challenges in life.
+        My motto is to "Always Grow". I am a firm believer in the inherent
+        potential to learn, grow, and transform in life. I'm quick to learn new
+        technologies and ideas because I am an incredibly curious lifelong learner
+        and always challenging myself to improve.
+      </p>
+    </div>
+    <footer>
+      <p>
+        Socials:
+        <a href="https://www.linkedin.com/in/jacobus-burger-174b83181/"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://github.com/LordUbuntu"><i class="fa-brands fa-github"></i></a>
+      </p>
+      Made by Jacobus Burger 2023.
+    </footer>
+  </body>
+</html>
