--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,14 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-  
+    <form class="contactform" action="">
+      <label for="fname">First Name</label>
+      <input type="text" id="fname" name="firstname" placeholder="Alice">
+      <label for="lname">Last Name</label>
+      <input type="text" id="lname" name="lastname" placeholder="Berkley">
+      <label for="body">Body</label>
+      <textarea id="body" name="body" placeholder="Your message"></textarea>
+      <input type="submit" value="Submit">
+    </form>
   </body>
 </html>
