--- a/contact.html
+++ b/contact.html
@@ -7,14 +7,21 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <form class="contactform" action="">
-      <label for="fname">First Name</label>
-      <input type="text" id="fname" name="firstname" placeholder="Alice">
-      <label for="lname">Last Name</label>
-      <input type="text" id="lname" name="lastname" placeholder="Berkley">
-      <label for="body">Body</label>
-      <textarea id="body" name="body" placeholder="Your message"></textarea>
-      <input type="submit" value="Submit">
-    </form>
+    <div class="navbar">
+      <a href="index.html">About</a>
+      <a href="contact.html">Contact</a>
+      <a href="projects.html">Projects</a>
+    </div>
+    <div class="content">
+      <form class="contactform" action="">
+        <label for="fname">First Name</label>
+        <input type="text" id="fname" name="firstname" placeholder="Alice">
+        <label for="lname">Last Name</label>
+        <input type="text" id="lname" name="lastname" placeholder="Berkley">
+        <label for="body">Body</label>
+        <textarea id="body" name="body" placeholder="Your message"></textarea>
+        <input type="submit" value="Submit">
+      </form>
+    </div>
   </body>
 </html>
