--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
       <a href="projects.html">Projects</a>
     </div>
     <div class="content">
-      <form class="contactform" action="">
+      <form class="contactform" action=""> <!-- TODO: add action -->
         <label for="fname">First Name</label>
         <input type="text" id="fname" name="firstname" placeholder="Alice">
         <label for="lname">Last Name</label>
@@ -23,5 +23,13 @@
         <input type="submit" value="Submit">
       </form>
     </div>
+    <footer>
+      <p>
+        Socials:
+        <a href="https://www.linkedin.com/in/jacobus-burger-174b83181/"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://github.com/LordUbuntu"><i class="fa-brands fa-github"></i></a>
+      </p>
+      Made by Jacobus Burger 2023.
+    </footer>
   </body>
 </html>
