reworked page based on feedback, defined doctype

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!HTML5>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Jacobus Burger</title>
@@ -13,7 +13,6 @@
     </div>
     <div class="content">
       <h1>Jacobus Burger</h1>
-      <h2>Computer Alchemist</h2>
       <p>Hey there! My name is Jacobus Burger. I'm a  <bold><em>Computer
         Scientist</em></bold> whose interests include:</p>
       <ul class="hobbies">
@@ -21,20 +20,9 @@
         <li>Artificial Intelligence</li>
         <li>Robotics</li>
         <li>3D Printing</li>
-        <li>Programming Language Development</li>
-        <li>Speaking Human Languages</li>
-        <li>And much more!</li>
+        <li>Spoken Languages</li>
+        <li>Programming Languages</li>
       </ul>
-      <h3>The Computer Alchemist</h3>
-      <p>
-        As a "Computer Alchemist", I develop software: turning ideas and problems
-        into working solutions. Some of the awesome things I've done include:
-        <ul>
-          <li></li>
-          <li></li>
-          <li>Curling a 50lb personal record at the gym!</li>
-        </ul>
-      </p>
       <p>
         My greatest strength is my ability to always learn and grow.
       </p>
