--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
     </div>
     <div class="content">
       <form class="contactform" action=""> <!-- TODO: add action -->
+        <h1>Contact Me</h1>
         <label for="fname">First Name</label>
         <input type="text" id="fname" name="firstname" placeholder="Alice">
         <label for="lname">Last Name</label>
