--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <title>Contact Me</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
     <div class="navbar">
@@ -13,16 +13,17 @@
       <a href="projects.html">Projects</a>
     </div>
     <div class="content">
-      <form class="contactform" action=""> <!-- TODO: add action -->
-        <h1>Contact Me</h1>
-        <label for="fname">First Name</label>
-        <input type="text" id="fname" name="firstname" placeholder="Alice">
-        <label for="lname">Last Name</label>
-        <input type="text" id="lname" name="lastname" placeholder="Berkley">
-        <label for="body">Body</label>
-        <textarea id="body" name="body" placeholder="Your message"></textarea>
-        <input type="submit" value="Submit">
-      </form>
+      <div class="contact">
+        <div class="left"></div>
+        <div class="right">
+          <h1>Contact Me</h1>
+          <input type="text" class="field" placeholder="Your name">
+          <input type="text" class="field" placeholder="Your number">
+          <input type="email" class="field" placeholder="Your email">
+          <textarea class="field" placeholder="Your message"></textarea>
+          <button class="send" action="">Send</button>
+        </div>
+      </div>
     </div>
     <footer>
       <p>
