prepare to implement basic contact script

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
           <input type="text" class="field" placeholder="Your number">
           <input type="email" class="field" placeholder="Your email">
           <textarea class="field" placeholder="Your message"></textarea>
-          <button class="send" action="">Send</button>
+          <button class="send" onclick="send_contact()">Send</button>
         </div>
       </div>
     </div>
