reworking contact form

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="src/main.js"></script>
   </head>
   <body>
@@ -14,25 +15,15 @@
       <a href="projects.html">Projects</a>
     </div>
     <div class="content">
-      <div class="contact">
-        <div class="left"></div>
-        <div class="right">
+      <form action="">
+        <div class="form-title">
           <h1>Contact Me</h1>
-          <input type="text" class="field" placeholder="Your name">
-          <input type="text" class="field" placeholder="Your number">
-          <input type="email" class="field" placeholder="Your email">
-          <textarea class="field" placeholder="Your message"></textarea>
-          <button class="send" onclick="send_contact()">Send</button>
         </div>
-      </div>
+        <div class="form-image">
+        </div>
+        <div class="form-body">
+        </div>
+      </form>
     </div>
-    <footer>
-      <p>
-        Socials:
-        <a href="https://www.linkedin.com/in/jacobus-burger-174b83181/"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="https://github.com/LordUbuntu"><i class="fa-brands fa-github"></i></a>
-      </p>
-      Made by Jacobus Burger 2023.
-    </footer>
   </body>
 </html>
