improved hover animations

--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
       </p>
     </div>
     <footer>
-      <p>
-        Socials:
+      <p style="font-size: 2rem; margin: 16px">
         <a href="https://www.linkedin.com/in/jacobus-burger-174b83181/"><i class="fa-brands fa-linkedin"></i></a>
         <a href="https://github.com/LordUbuntu"><i class="fa-brands fa-github"></i></a>
       </p>
