--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div class="navbar">
@@ -16,8 +17,7 @@
       <p>Under Construction!</p>
     </div>
     <footer>
-      <p>
-        Socials:
+      <p style="font-size: 2rem; margin: 16px">
         <a href="https://www.linkedin.com/in/jacobus-burger-174b83181/"><i class="fa-brands fa-linkedin"></i></a>
         <a href="https://github.com/LordUbuntu"><i class="fa-brands fa-github"></i></a>
       </p>
