--- a/contact.html
+++ b/contact.html
@@ -25,5 +25,12 @@
         </div>
       </form>
     </div>
+    <footer>
+      <p style="font-size: 2rem; margin: 16px">
+        <a href="https://www.linkedin.com/in/jacobus-burger-174b83181/"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://github.com/LordUbuntu"><i class="fa-brands fa-github"></i></a>
+      </p>
+      Made by Jacobus Burger 2023.
+    </footer>
   </body>
 </html>
