added contact form placeholder

--- a/contact.html
+++ b/contact.html
@@ -16,13 +16,10 @@
     </div>
     <div class="content">
       <form action="">
-        <div class="form-title">
-          <h1>Contact Me</h1>
-        </div>
-        <div class="form-image">
-        </div>
-        <div class="form-body">
-        </div>
+        <h1 style="color: #cc2211; font-weight: 777;">Under Construction!</h1>
+        <p>An awesome contact form is on it's way, but in the meantime you can
+          reach out to me by sending an email to (remove ***s)
+          the*real*jaco*burger*@*gmail.*com</p>
       </form>
     </div>
     <footer>
