--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
       <a href="projects.html">Projects</a>
     </div>
     <div class="content">
-      <p>Under Construction!</p>
+      <h1 style="color: #cc2211; font-weight: 777;">Under Construction!</h1>
     </div>
     <footer>
       <p style="font-size: 2rem; margin: 16px">
