give more temp info

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li>3D Printing</li>
         <li>Spoken Languages</li>
         <li>Programming Languages</li>
+        <li>Chess</li>
       </ul>
       <p>
         My greatest strength is my ability to always learn and grow.
