--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,8 @@
         <h1 style="color: #cc2211; font-weight: 777;">Under Construction!</h1>
         <p>An awesome contact form is on it's way, but in the meantime you can
           reach out to me by sending an email to (remove ***s)
-          the*real*jaco*burger*@*gmail.*com</p>
+          the*real*jaco*burger*@*gmail.*com
+          or visiting my GitHub at https://www.github.com/LordUbuntu</p>
       </form>
     </div>
     <footer>
