need to add projects

--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,7 @@
     </div>
     <div class="content">
       <h1 style="color: #cc2211; font-weight: 777;">Under Construction!</h1>
+      <p>TODO: add projects here</p>
     </div>
     <footer>
       <p style="font-size: 2rem; margin: 16px">
